# rust_user_crud

./: .gitignore  Cargo.toml  Rocket.toml  readme.md
migrations/2022-01-01-000000_create_users/: down.sql  up.sql
src/: db.rs  main.rs  schema.rs
src/models/: mod.rs  user.rs
src/repositories/: user_repository.rs
src/routes/: user_routes.rs
